# prosthetic-wagtail

./: docker-compose-ecslike.yaml  entrypoint-ecs.sh  package-lock.json  package.json  pyproject.toml  todo.md
apps/staticbuild/: views.py  wagtail_hooks.py
apps/staticbuild/tests/: test_jobs.py  test_views.py
apps/storages/: static.py
apps/storages/tests/: test_static.py
apps/website/blocks/: content.py  widgets.py
apps/website/migrations/: 0002_alter_standardpage_content_stayintouch.py  0003_homepage_add_bottom_padding_and_more.py  0006_standardpage_charset_standardpage_og_description_and_more.py  0008_blogoverviewpage_blogpost.py  0009_blogpost_date.py  0010_remove_blogpost_header.py  0011_delete_blogpost.py  0012_blogpost.py  0014_standardpage_header_image_and_more.py  0015_alter_standardpage_content.py  (+2 more)
docker/lighttpd/: lighttpd.conf
ecs/: wagtail-task-prod.json
localize_crowdin/: apps.py  views.py  wagtail_hooks.py
scripts/: npm.bat
terraform/: bunny-cf-auth.js  bunny.tf  main.tf  state.tf
website-django/: .djlintrc  .dockerignore  .gitignore  .prettierignore  .prettierrc  README.md  copilot-instructions.md  docker-compose.yaml  manage.py
website-django/docker/: django.dockerfile  django_init.sh  ecs.dockerfile  lighttpd.dockerfile
website-django/ecs/: worker-task-prod.json
website-django/localize_crowdin/: hooks.py  sync.py
website-django/scripts/: managepy.bat  poetry.bat
website-django/terraform/: .terraform.lock.hcl  ecs.tf  vars.tf
website-django/website_django/: urls.py
website_django/: wsgi.py
website_django/settings/: base.py
(+83 files in other folders)
